@- Added third argument to in_array(). If it's true, then in_array() @  will use strict comparison instead of the default one. (Andrei)

Fixes bug #4753